[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queryforge-v1"
version = "1.0.0"
description = "QueryForge-v1: SQL query optimization and debugging OpenEnv environment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Sarthak" }
]
keywords = ["openenv", "sql", "optimization", "agents", "fastapi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.7.1",
  "requests==2.31.0",
  "openai==1.30.0",
  "openenv-core==0.1.0",
]

[project.urls]
Repository = "https://github.com/yashodipmore/queryforge-v1"
Homepage = "https://huggingface.co/spaces/yashodipmore/queryforge-v1"

[tool.setuptools.packages.find]
include = ["queryforge*"]
exclude = ["tests*"]
